# rust_cpp_interop_testing

./: .gitignore  CMakeLists.txt  main.cpp
corrosion_example/: CMakeLists.txt  MyObj.hpp  main.cpp
corrosion_example/rust_obj_lib/: Cargo.toml
corrosion_example/rust_obj_lib/src/: lib.rs
math_cpp/: CMakeLists.txt
math_rust/: Cargo.toml
simple_example/: CMakeLists.txt
simple_example/math_cpp/src/: math_cpp.cpp
simple_example/math_rust/include/: math_rust.h
simple_example/math_rust/src/: lib.rs
